#61: CSV can be downloaded